--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,300 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@media (max-width: 600px){
+	.overall .nav {
+		grid-template: 1fr 1fr / 1fr 1fr;
+		grid-column-gap: 0.25rem;
+		grid-row-gap: 0.25rem;
+		
+	}
+	
+	.overall .right span {
+		font-size: 2rem;
+	}
+	
+	.overall #objective-grid {
+		grid-template: 1fr 1fr / 1fr;
+		justify-items: center;
+	}
+	
+	.overall .objective img {
+		margin-right: 0;
+	}
+	
+	.overall .main #objective, .overall .main #education, .overall .main #rel-exp, .overall .main #portfolio {
+		bottom: 8rem;
+	}
+	
+	
+	
+	.portfolio .port-grid {
+		grid-template: 1fr 1fr / 1fr;
+		grid-row-gap: 2rem;
+		margin-bottom: 0rem;
+	}
+	
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@font-face {
+  font-family: 'Nunito';
+  font-style: italic;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Nunito Italic'), local('Nunito-Italic'), url(https://fonts.gstatic.com/s/nunito/v12/XRXX3I6Li01BKofIMNaDRs7nczIH.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@font-face {
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Nunito Regular'), local('Nunito-Regular'), url(https://fonts.gstatic.com/s/nunito/v12/XRXV3I6Li01BKofINeaBTMnFcQ.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-.App-link {
-  color: #61dafb;
+@font-face {
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: local('Nunito Bold'), local('Nunito-Bold'), url(https://fonts.gstatic.com/s/nunito/v12/XRXW3I6Li01BKofAjsOUYevIWzgPDA.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@font-face {
+  font-family: 'Overpass';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Overpass Regular'), local('Overpass-Regular'), url(https://fonts.gstatic.com/s/overpass/v4/qFdH35WCmI96Ajtm81GlU9vgwBcI.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: 'Overpass';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: local('Overpass Bold'), local('Overpass-Bold'), url(https://fonts.gstatic.com/s/overpass/v4/qFdA35WCmI96Ajtm81keds7N4hoiiVI6.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: 'Varela Round';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Varela Round Regular'), local('VarelaRound-Regular'), url(https://fonts.gstatic.com/s/varelaround/v12/w8gdH283Tvk__Lua32TysjIfp8uPLdshZg.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+.header {
+	display: grid;
+	width: 100%;
+	padding: 0.75rem 0.5rem;
+	text-align: center;
+	justify-items: center;
+	align-items: center;
+}
+
+.header h1 {
+	font-family: "Overpass", sans-serif;
+	font-weight: 700;
+	font-size: 3rem;
+	cursor: default;
+}
+
+.nav {
+	display: grid;
+	position: sticky;
+	width: 100%;
+	
+	grid-template: 100% / repeat(4, 1fr);
+	top: 0;
+	justify-items: center;
+	align-items: center;
+	grid-column-gap: 0.5rem;
+	border: 0.5rem solid black;
+	border-left: none;
+	border-right: none;
+	background-color: white;
+	
+}
+
+a {
+	width: inherit;
+	height: inherit;
+	text-decoration: inherit;
+}
+
+a .nav-btn:hover {
+	color: #c41e3a; /* Cardinal Red */
+}
+
+.nav-btn {
+	font-family: "Overpass", sans-serif;
+	font-size: 1.5rem;
+	background-color: black;
+	color: white;
+	text-align: center;
+	height: 3.75rem;
+}
+
+.nav-btn span {
+	font-size: 0.9rem;
+}
+
+/* nav button single word */
+.single-word {
+	padding-top: 0.75rem;
+}
+
+.double-word {
+	line-height: 1.5rem;
+	padding-bottom: 0rem;
+}
+
+.main {
+	display: block;
+	width: 100%;
+	background-color: white;
+	cursor: default;
+}
+
+h2 {
+	font-family: "Overpass", sans-serif;
+	font-style: italic;
+	font-size: 3rem;
+	color: white;
+	
+}
+
+.main h3 {
+	margin: 10px auto;
+	font-family: "Nunito", sans-serif;
+	font-style: italic;
+	font-size: 2rem;
+}
+
+.main p {
+	margin: 0 2rem;
+	padding-bottom: 0.5rem;
+	padding-left: 0.5rem;
+	text-align: left;
+	font-family: "Nunito", sans-serif;
+	font-size: 1.5rem;
+}
+
+.year-row {
+	display: grid;
+	grid-template: 1fr 1fr / 1fr 1fr;
+	margin: 2rem 2rem;
+	font-family: "Nunito", sans-serif;
+}
+
+.year-row .left {
+	text-align: center;
+	padding-right: 30px;
+	padding-left: 35px;
+	font-size: 1.5rem;
+}
+
+.year-row .right {
+	text-align: left;
+	
+	font-size: 1.25rem;
+}
+
+.right span {
+	font-size: 2.5rem;
+}
+
+h2 span {
+	background-color: #c41e3a;
+	padding-right: 1rem;
+	padding-left: 1.5rem;
+}
+
+.overall {
+	border: 0.5rem solid black; 
+	padding-bottom: 10rem;
+}
+
+.objective, .education, .portfolio, .rel-exp {
+	padding-top: 2rem;
+	
+}
+
+.rel-exp h3 {
+	padding-left: 2rem;
+	padding-top: 2rem;
+}
+
+.rel-exp p {
+	color: black;
+}
+
+#objective-grid {
+	display: grid;
+	grid-template: 1fr / 1fr 3fr;
+	align-items: center;
+	padding-top: 2rem;
+	padding: 0 2rem;
+	color: black;
+}
+
+.returnToRes {
+	display: grid;
+	align-items: center;
+	text-align: center;
+	height: 2rem;
+	width: 100%;
+	font-family: Helvetica;
+	z-index: 4;
+}
+
+.objective p {
+	max-width: 450px;
+	margin: 20px auto;
+	color: black;
+}
+
+.objective img {
+	float: right;
+	width: 30vw;
+	height: 30vw;
+	min-width: 10rem;
+	min-height: 10rem;
+	margin-right: 3rem;
+	
+}
+
+.overall #objective, .overall #education, .overall #rel-exp, .overall #portfolio {
+	position: relative;
+	bottom: 3rem;
+}
+
+.port-grid {
+	display: grid;
+	grid-template: 1fr / 1fr 1fr;
+	justify-items: center;
+	align-items: center;
+	margin-top: 4rem;
+	margin-bottom: 14rem;
+}
+
+.port-item {
+	display: grid;
+	justify-items: center;
+	align-items: center;
+	text-align: center;
+	line-height: 2rem;
+	height: 10rem;
+	width: 10rem;
+	border: 0.5rem solid black;
 }
